test/syc/good/deref.c
/*
 * Dereference
 */

int deref(void)
{
	return *(16384);
}
